adding social login to application

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,30 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+# Social authentication ids
+
+# https://developers.facebook.com/
+FB_ID=YOURFACEBOOKidHERE
+FB_SECRET=YOURFACEBOOKsecretHERE
+FB_REDIRECT=http://yourwebsiteURLhere.com/social/handle/facebook
+
+# https://apps.twitter.com/
+TW_ID=YOURTWITTERidHERE
+TW_SECRET=YOURTWITTERkeyHERE
+TW_REDIRECT=http://yourwebsiteURLhere.com/social/handle/twitter
+
+# https://www.linkedin.com/developer/apps
+LN_ID=YOURLinkedinIdHERE
+LN_SECRET=YOURLinkedinkeyHERE
+LN_REDIRECT=http://yourwebsiteURLhere.com/social/handle/linkedin
+
+# https://console.developers.google.com/ - NEED OAUTH CREDS
+GOOGLE_ID=YOURGOOGLEPLUSidHERE
+GOOGLE_SECRET=YOURGOOGLEPLUSsecretHERE
+GOOGLE_REDIRECT=http://yourwebsiteURLhere.com/social/handle/google
+
+# https://github.com/settings/applications/new
+GITHUB_ID=YOURIDHERE
+GITHUB_SECRET=YOURSECRETHERE
+GITHUB_URL=https://larablog.io/social/handle/github
