Create article controller

--- a/.env.example
+++ b/.env.example
@@ -44,9 +44,9 @@ TW_SECRET=YOURTWITTERkeyHERE
 TW_REDIRECT=http://yourwebsiteURLhere.com/social/handle/twitter
 
 # https://www.linkedin.com/developer/apps
-LN_ID=YOURLinkedinIdHERE
-LN_SECRET=YOURLinkedinkeyHERE
-LN_REDIRECT=http://yourwebsiteURLhere.com/social/handle/linkedin
+LINKEDIN_KEY=yourkeyfortheservice
+LINKEDIN_SECRET=yoursecretfortheservice
+LINKEDIN_REDIRECT_URI=https://example.com/login  
 
 # https://console.developers.google.com/ - NEED OAUTH CREDS
 GOOGLE_ID=YOURGOOGLEPLUSidHERE
@@ -57,3 +57,8 @@ GOOGLE_REDIRECT=http://yourwebsiteURLhere.com/social/handle/google
 GITHUB_ID=YOURIDHERE
 GITHUB_SECRET=YOURSECRETHERE
 GITHUB_URL=https://larablog.io/social/handle/github
+
+# other values above
+FLICKR_KEY=yourkeyfortheservice
+FLICKR_SECRET=yoursecretfortheservice
+FLICKR_REDIRECT_URI=https://example.com/login   
