--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,6 @@
     "skycons": "https://github.com/darkskyapp/skycons.git",
     "jquery-sparkline": "^2.1.3",
     "morris.js": "^0.5.1",
-    "bootstrap-wysiwyg": "bootstrap-wysiwyg-steveathon#^1.0.5",
     "jquery.tagsinput": "^1.3.6",
     "switchery": "^0.8.1",
     "select2": "^4.0.2",
@@ -78,8 +77,8 @@
     "DateJS": "^1.0.0-rc3",
     "flot.curvedlines": "^1.1.1",
     "flot.orderbars": "*",
-    "flot-spline": "^0.8.2"
-    
+    "flot-spline": "^0.8.2",
+    "tinymce": "^4.5.3"
   },
   "resolutions": {
     "jquery": "^2.2.3",
