--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "laravel-mix": "^0.5.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
