--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "LaravelAdmin",
+  "name": "laravelAdmin",
   "description": "Admin template laravel 5.3",
   "main": "",
   "authors": [
