--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
     "presets": [
         "env", "stage-3", "react"
+    ],
+    "plugins": [
+        ["transform-class-properties", { "spec": true }]
     ]
 }
