--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-3": "^6.24.1",
@@ -25,6 +26,8 @@
         "webpack-cli": "^3.1.0"
     },
     "dependencies": {
+        "@material-ui/core": "^1.5.1",
+        "@material-ui/icons": "^2.0.3",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-redux": "^5.0.7",
