create laravel api

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@material-ui/core": "^1.5.1",
         "@material-ui/icons": "^2.0.3",
+        "axios": "^0.18.0",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-redux": "^5.0.7",
