--- a/package.json
+++ b/package.json
@@ -14,26 +14,22 @@
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.1",
         "css-loader": "^1.0.0",
+        "file-loader": "^2.0.0",
         "lodash": "^4.17.4",
         "node-sass": "^4.9.3",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.22.1",
+        "vue-loader": "^15.4.1",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0"
     },
     "dependencies": {
-        "@material-ui/core": "^1.5.1",
-        "@material-ui/icons": "^2.0.3",
         "axios": "^0.18.0",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2",
-        "react-redux": "^5.0.7",
-        "react-router-dom": "^4.3.1",
-        "redux": "^4.0.0",
-        "redux-thunk": "^2.3.0"
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
