--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-        "env", "stage-3", "react"
+        "env", "stage-3"
     ],
     "plugins": [
         ["transform-class-properties", { "spec": true }]
