--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
         "css-loader": "^1.0.0",
         "file-loader": "^2.0.0",
         "lodash": "^4.17.4",
-        "node-sass": "^4.9.3",
-        "sass-loader": "^7.1.0",
         "style-loader": "^0.22.1",
         "vue-loader": "^15.4.1",
+        "vue-template-compiler": "^2.5.17",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0"
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "babel-polyfill": "^6.26.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
+        "vuetify": "^1.2.0",
         "vuex": "^3.0.1"
     }
 }
