--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
+        "babel-eslint": "^9.0.0",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.1",
         "css-loader": "^1.0.0",
+        "eslint": "^5.5.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-vue": "^4.7.1",
         "file-loader": "^2.0.0",
         "lodash": "^4.17.4",
         "style-loader": "^0.22.1",
