added a snapbar at bottom

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     ],
     "rules": {
         "indent": ["error", 4],
-        "vue/html-indent": ["error", 4]
+        "vue/html-indent": ["error", 4],
+        "no-param-reassign": ["error", { "props": false }]
     }
 }
