--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,25 @@
         "airbnb-base",
         "plugin:vue/recommended"
     ],
+    "globals": {
+        "axios": true,
+        "Vue": true
+    },
+    "settings": {
+        "import/resolver": {
+            "webpack": {
+                "config": "webpack.config.js"
+            }
+        }
+    },
     "rules": {
+        "import/extensions": ["error", "always", {
+            "js": "never",
+            "vue": "never"
+        }],
         "indent": ["error", 4],
         "vue/html-indent": ["error", 4],
-        "no-param-reassign": ["error", { "props": false }]
+        "no-param-reassign": ["error", { "props": false }],
+        "space-before-function-paren": ["error", "always"]
     }
 }
