--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
         "babel-polyfill": "^6.26.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
+        "vee-validate": "^2.1.0-beta.8",
         "vue": "^2.5.17",
+        "vue-multiselect": "^2.1.0",
         "vue-router": "^3.0.1",
         "vuetify": "^1.2.0",
         "vuex": "^3.0.1"
