--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "indent": ["error", 4],
         "vue/html-indent": ["error", 4],
         "no-param-reassign": ["error", { "props": false }],
-        "space-before-function-paren": ["error", "always"]
+        "space-before-function-paren": ["error", "always"],
+        "no-restricted-globals": ["confirm"]
     }
 }
