added role save in database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,6 @@
         "indent": ["error", 4],
         "vue/html-indent": ["error", 4],
         "no-param-reassign": ["error", { "props": false }],
-        "space-before-function-paren": ["error", "always"],
-        "no-restricted-globals": ["confirm"]
+        "space-before-function-paren": ["error", "always"]
     }
 }
