--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "lodash": "^4.17.4",
         "style-loader": "^0.22.1",
         "vue-loader": "^15.4.1",
+        "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.5.17",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0"
