added dropzone for file upload

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
          "parser": "babel-eslint"
      },
     "extends": [
-        "airbnb-base",
+        "airbnb-standard",
         "plugin:vue/recommended"
     ],
     "globals": {
@@ -23,13 +23,6 @@
         }
     },
     "rules": {
-        "import/extensions": ["error", "always", {
-            "js": "never",
-            "vue": "never"
-        }],
-        "indent": ["error", 4],
-        "vue/html-indent": ["error", 4],
-        "no-param-reassign": ["error", { "props": false }],
-        "space-before-function-paren": ["error", "always"]
+        
     }
 }
