--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "css-loader": "^1.0.0",
         "eslint": "^5.5.0",
         "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-airbnb-standard": "^2.1.6",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-vue": "^4.7.1",
         "file-loader": "^2.0.0",
@@ -34,6 +35,7 @@
     "dependencies": {
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
+        "dropzone": "^5.5.1",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
         "vee-validate": "^2.1.0-beta.8",
