--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-airbnb-standard": "^2.1.6",
         "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-node": "^7.0.1",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^4.7.1",
         "file-loader": "^2.0.0",
         "lodash": "^4.17.4",
