--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.1",
         "css-loader": "^1.0.0",
-        "eslint": "^5.5.0",
+        "eslint": "^5.6.0",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-airbnb-standard": "^2.1.6",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-html": "^4.0.5",
         "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
         "eslint-plugin-node": "^7.0.1",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^4.7.1",
+        "eslint-plugin-vue": "^5.0.0-beta.3",
+        "eslint-plugin-vue-libs": "^3.0.0",
         "file-loader": "^2.0.0",
         "lodash": "^4.17.4",
         "style-loader": "^0.22.1",
