--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "dropzone": "^5.5.1",
+        "js-cookie": "^2.2.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
         "vee-validate": "^2.1.0-beta.8",
