user info popup and logout

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,9 @@
         }
     },
     "rules": {
-        
+        "no-global-assign": ["error", {"exceptions": ["Object"]}],
+        "globals": {
+            "LA": true
+        }
     }
 }
