--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.1",
-        "css-loader": "^1.0.0",
-        "eslint": "^5.6.0",
+        "css-loader": "^1.0.1",
+        "eslint": "^5.10.0",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-airbnb-standard": "^2.1.6",
         "eslint-config-standard": "^12.0.0",
-        "eslint-plugin-html": "^4.0.5",
+        "eslint-plugin-html": "^4.0.6",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-node": "^7.0.1",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^5.0.0-beta.3",
+        "eslint-plugin-vue": "^5.0.0",
         "eslint-plugin-vue-libs": "^3.0.0",
         "file-loader": "^2.0.0",
-        "lodash": "^4.17.4",
+        "lodash": "^4.17.11",
         "style-loader": "^0.22.1",
-        "vue-loader": "^15.4.1",
+        "vue-loader": "^15.4.2",
         "vue-style-loader": "^4.1.2",
-        "vue-template-compiler": "^2.5.17",
-        "webpack": "^4.16.5",
-        "webpack-cli": "^3.1.0"
+        "vue-template-compiler": "^2.5.21",
+        "webpack": "^4.28.1",
+        "webpack-cli": "^3.1.2"
     },
     "dependencies": {
         "axios": "^0.18.0",
@@ -45,11 +45,11 @@
         "js-cookie": "^2.2.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
-        "vee-validate": "^2.1.0-beta.8",
-        "vue": "^2.5.17",
-        "vue-multiselect": "^2.1.0",
-        "vue-router": "^3.0.1",
-        "vuetify": "^1.2.0",
+        "vee-validate": "^2.1.4",
+        "vue": "^2.5.21",
+        "vue-multiselect": "^2.1.3",
+        "vue-router": "^3.0.2",
+        "vuetify": "^1.3.15",
         "vuex": "^3.0.1"
     }
 }
