--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,7 @@
          "parser": "babel-eslint"
      },
     "extends": [
-        "eslint:recommended",
-        "plugin:vue/essential"
+        "plugin:vue/recommended"
     ],
     "plugins" : ["html"],
     "globals": {
