--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.1",
         "css-loader": "^1.0.1",
-        "eslint": "^5.10.0",
+        "eslint": "^5.11.1",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-airbnb-standard": "^2.1.6",
         "eslint-config-standard": "^12.0.0",
@@ -32,6 +32,7 @@
         "file-loader": "^2.0.0",
         "lodash": "^4.17.11",
         "style-loader": "^0.22.1",
+        "vue-eslint-parser": "^4.0.3",
         "vue-loader": "^15.4.2",
         "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.5.21",
