--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
-        "league/fractal": "^0.17.0"
+        "league/fractal": "^0.17.0",
+        "pion/laravel-chunk-upload": "^1.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
