added social login service

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://example.com/
 
 LOG_CHANNEL=stack
 
@@ -37,3 +37,31 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=null
+FACEBOOK_CLIENT_SECRET=null
+FACEBOOK_REDIRECT_URI=http://example.com/login/handle/facebook/
+
+TWITTER_CLIENT_ID=null
+TWITTER_CLIENT_SECRET=null
+TWITTER_REDIRECT_URI=http://example.com/login/handle/twiter/
+
+GOOGLE_CLIENT_ID=null
+GOOGLE_CLIENT_SECRET=null
+GOOGLE_REDIRECT_URI=http://example.com/login/handle/google/
+
+GITHUB_CLIENT_ID=null
+GITHUB_CLIENT_SECRET=null
+GITHUB_REDIRECT_URI=http://example.com/login/handle/github/
+
+YOUTUBE_CLIENT_ID=null
+YOUTUBE_CLIENT_SECRET=null
+YOUTUBE_REDIRECT_URI=http://example.com/login/handle/youtube/
+
+TWITCH_CLIENT_ID=null
+TWITCH_CLIENT_SECRET=null
+TWITCH_REDIRECT_URI=http://example.com/login/handle/twitch/
+
+INSTAGRAM_CLIENT_ID=null
+INSTAGRAM_CLIENT_SECRET=null
+INSTAGRAM_REDIRECT_URI=http://example.com/login/handle/instagram/
