--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.0",
+        "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
         "league/fractal": "^0.17.0",
         "pion/laravel-chunk-upload": "^1.2"
