shared files with user

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,10 @@
         "no-unreachable": "warn",
         "no-unused-vars": "warn",
         "constructor-super": "warn",
-        "valid-typeof": "warn"
+        "valid-typeof": "warn",
+        "vue/component-name-in-template-casing": ["error", "PascalCase", {
+            "registeredComponentsOnly": false,
+            "ignores": []
+          }]
     }
 }
