--- a/package.json
+++ b/package.json
@@ -17,47 +17,52 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "babel-preset-stage-3": "^6.24.1",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.1",
         "css-loader": "^1.0.1",
-        "eslint": "^6.0.1",
+        "deepmerge": "^4.0.0",
+        "eslint": "^6.3.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-plugin-html": "^4.0.6",
-        "eslint-plugin-import": "^2.18.0",
+        "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-node": "^7.0.1",
         "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-standard": "^4.0.1",
         "eslint-plugin-vue": "^5.2.3",
         "eslint-plugin-vue-libs": "^3.0.2",
+        "fibers": "^4.0.1",
         "file-loader": "^2.0.0",
-        "lodash": "^4.17.14",
+        "lodash": "^4.17.15",
         "mini-css-extract-plugin": "^0.5.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-import": "^12.0.1",
         "postcss-load-config": "^2.1.0",
         "postcss-loader": "^3.0.0",
         "postcss-nested": "^4.1.2",
+        "sass": "^1.22.10",
+        "sass-loader": "^8.0.0",
         "style-loader": "^0.22.1",
-        "uglifyjs-webpack-plugin": "^2.1.3",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "vue-eslint-parser": "^4.0.3",
-        "vue-loader": "^15.7.0",
+        "vue-loader": "^15.7.1",
         "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.35.3",
-        "webpack-cli": "^3.3.6"
+        "vuetify-loader": "^1.3.0",
+        "webpack": "^4.39.3",
+        "webpack-cli": "^3.3.7"
     },
     "dependencies": {
         "axios": "^0.18.1",
         "babel-polyfill": "^6.26.0",
         "dropzone": "^5.5.1",
-        "js-cookie": "^2.2.0",
+        "i": "^0.3.6",
+        "js-cookie": "^2.2.1",
         "plyr": "^3.5.6",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.2",
-        "vee-validate": "^2.2.12",
+        "vee-validate": "^2.2.15",
         "vue": "^2.6.10",
+        "vue-cli-plugin-vuetify": "^0.6.3",
         "vue-multiselect": "^2.1.6",
-        "vue-router": "^3.0.7",
-        "vuetify": "^1.5.16",
+        "vue-router": "^3.1.3",
+        "vuetify": "^2.0.11",
         "vuex": "^3.1.1"
     }
 }
