--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,25 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2.5",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "intervention/image": "^2.5",
-        "joedixon/laravel-translation": "^1.1",
-        "laravel/framework": "^7.0",
-        "laravel/passport": "^8.4",
-        "laravel/socialite": "^4.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "waavi/translation": "^2.4"
+        "php": "^8.0.2",
+        "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
+        "laravel/framework": "^9.11",
+        "laravel/passport": "^10.4",
+        "laravel/socialite": "^5.5",
+        "laravel/tinker": "^2.7",
+        "pion/laravel-chunk-upload": "^1.5"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
-        "barryvdh/laravel-ide-helper": "^2.6",
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "barryvdh/laravel-debugbar": "^3.6",
+        "barryvdh/laravel-ide-helper": "^2.12",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.10",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -33,8 +31,7 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/",
-            "Pion\\Laravel\\ChunkUpload\\": "packages/laravel-chunk-upload/src/"
+            "App\\": "app/"
         },
         "files": [
             "app/helper/functions.php"
