--- a/package.json
+++ b/package.json
@@ -2,44 +2,46 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
+        "axios": "^0.27.2",
         "babel-eslint": "^10.1.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
-        "cross-env": "^7.0",
-        "dropzone": "^5.7.0",
-        "eslint": "^6.8.0",
-        "eslint-config-standard": "^14.1.1",
-        "eslint-loader": "^3.0.4",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "js-cookie": "^2.2.1",
-        "laravel-mix": "^5.0.1",
-        "laravel-mix-eslint-config": "^0.1.7",
-        "lodash": "^4.17.13",
-        "plyr": "^3.6.2",
-        "postcss-nested": "^4.2.1",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
-        "vee-validate": "^3.3.0",
-        "vue": "^2.6.11",
-        "vue-loader": "^15.9.2",
+        "cross-env": "^7.0.3",
+        "dropzone": "^6.0.0-beta.2",
+        "eslint": "^8.18.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-standard": "^5.0.0",
+        "eslint-plugin-vue": "^9.1.1",
+        "js-cookie": "^3.0.1",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.21",
+        "plyr": "^3.7.2",
+        "postcss": "^8.4.6",
+        "postcss-nested": "^5.0.6",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.53.0",
+        "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.1.0",
+        "vee-validate": "^3.4.14",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.0.0",
         "vue-multiselect": "^2.1.6",
-        "vue-router": "^3.1.6",
-        "vue-template-compiler": "^2.6.11",
-        "vuetify": "^2.2.27",
-        "vuetify-loader": "^1.4.3",
-        "vuex": "^3.3.0"
+        "vue-router": "^3.5.4",
+        "vue-template-compiler": "^2.6.14",
+        "vuetify": "^2.6.6",
+        "vuetify-loader": "^1.7.3",
+        "vuex": "^3.6.2"
     }
 }
