--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.11",
-        "laravel/passport": "^10.4",
+        "laravel/sanctum": "^2.15",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "pion/laravel-chunk-upload": "^1.5"
@@ -26,12 +26,10 @@
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "app/helper/functions.php"
