--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
+        "@mdi/font": "^7.0.96",
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "@vitejs/plugin-vue": "^2.3.3",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
-        "vite": "^2.9.11"
+        "vite": "^2.9.11",
+        "vue": "^3.2.37",
+        "vue-router": "^4.1.2",
+        "vuetify": "^3.0.0-beta.5"
     }
 }
