--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch": "vite build --watch"
+        "watch": "vite build --mode development --watch "
     },
     "devDependencies": {
         "@mdi/font": "^7.0.96",
-        "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^2.3.3",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
+        "axios": "^0.25.0",
+        "dropzone": "^6.0.0-beta.2",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
+        "mitt": "^3.0.0",
+        "plyr": "^3.7.2",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
         "vite": "^2.9.11",
         "vue": "^3.2.37",
+        "vue-multiselect": "^3.0.0-alpha.2",
         "vue-router": "^4.1.2",
-        "vuetify": "^3.0.0-beta.5"
+        "vuetify": "^3.0.0-beta.5",
+        "vuex": "^4.0.2"
     }
 }
