--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dropzone": "^6.0.0-beta.2",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
+        "material-design-icons-iconfont": "^6.7.0",
         "mitt": "^3.0.0",
         "plyr": "^3.7.2",
         "postcss": "^8.4.6",
